added getdown tool to build
added submodule at tools/getdown; points at
git@github.com:abargnesi/getdown.git

updated env vars to support getdown tool; added TODO complaints

started a new package script

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = apps/model-builder
 	url = git@github.com:Selventa/model-builder.git
 	branch = experimental
+[submodule "tools/getdown"]
+	path = tools/getdown
+	url = git@github.com:abargnesi/getdown.git
