--- a/tools/distribution/cytoscape/framework/etc/org.ops4j.pax.logging.cfg
+++ b/tools/distribution/cytoscape/framework/etc/org.ops4j.pax.logging.cfg
@@ -3,7 +3,7 @@
 
 # The following specifies that log messages are sent to the Console and
 # status bar
-log4j.rootLogger=ALL, stdout, osgi:OrgCytoscapeLogSwingAllLogMessagesAppender
+log4j.rootLogger=ALL, stdout, syslog, osgi:OrgCytoscapeLogSwingAllLogMessagesAppender
 log4j.logger.CyUserMessages=INFO, osgi:OrgCytoscapeLogSwingUserMessagesAppender
 
 #
@@ -29,6 +29,14 @@ log4j.appender.stdout.layout.ConversionPattern=%t %p [%c] - %m%n
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.threshold=WARN
 
+log4j.appender.syslog=org.apache.log4j.net.SyslogAppender
+log4j.appender.syslog.Facility=LOCAL7 
+log4j.appender.syslog.FacilityPrinting=false 
+log4j.appender.syslog.Header=true 
+log4j.appender.syslog.SyslogHost=logs.papertrailapp.com:58071
+log4j.appender.syslog.Threshold = WARN
+log4j.appender.syslog.layout=org.apache.log4j.PatternLayout 
+log4j.appender.syslog.layout.ConversionPattern=%p: (%F:%L) %x %m %n
 
 log4j.logger.java=NONE,file
 log4j.additivity.java=false
