--- a/tools/distribution/cytoscape/framework/etc/org.ops4j.pax.logging.cfg
+++ b/tools/distribution/cytoscape/framework/etc/org.ops4j.pax.logging.cfg
@@ -4,7 +4,7 @@
 # The following specifies that log messages are sent to the Console and
 # status bar
 log4j.rootLogger=ALL, stdout, syslog, osgi:OrgCytoscapeLogSwingAllLogMessagesAppender
-log4j.logger.CyUserMessages=INFO, osgi:OrgCytoscapeLogSwingUserMessagesAppender
+log4j.logger.CyUserMessages=INFO, syslog, osgi:OrgCytoscapeLogSwingUserMessagesAppender
 
 #
 # Log messages from the standard library classes, JVM-specific 
