--- a/tools/cytoscape/framework/etc/org.ops4j.pax.logging.cfg
+++ b/tools/cytoscape/framework/etc/org.ops4j.pax.logging.cfg
@@ -20,7 +20,7 @@ log4j.logger.TaskMonitor=INFO, osgi:TaskMonitorShowMessagesAppender
 
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.threshold=INFO
-log4j.appender.file.File=${user.home}/CytoscapeConfiguration/3/framework-cytoscape.log
+log4j.appender.file.File=${plugin.cy3.log.file}
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
