replaced kam-nav with bel-nav
updated scripts to interact with bel-nav using maven

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = tools/s3cmd
 	url = https://github.com/s3tools/s3cmd.git
     branch = master
+[submodule "apps/bel-nav"]
+	path = apps/bel-nav
+	url = git@github.com:OpenBEL/bel-nav.git
